# MultiOutputIHGP

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example.py
include/: DARE.h  LBFGS.h  LBFGSB.h
include/LBFGSpp/: BFGSMat.h  Cauchy.h  LineSearchBracketing.h  LineSearchMoreThuente.h  LineSearchNocedalWright.h  Param.h  SubspaceMin.h
include/moihgp/: ihgp.h  moihgp.h  moihgp_online.h
moihgp/: CMakeLists.txt  __init__.py  online_learning.py  pywrapper.py
moihgp/cpp_examples/: example_online_learning.cpp  example_regression.cpp
moihgp/examples/: example_online_learning.cpp  example_regression.cpp
moihgp/include/LBFGSpp/: BFGSMat.h  BKLDLT.h  LBFGSB.h  LineSearchBacktracking.h  Param.h
moihgp/include/moihgp/: ihgp.h  matern32ss.h  matern52ss.h  moihgp.h  moihgp_online.h  moihgp_regression.h
moihgp/include/utils/: dare.h  pinv.h
moihgp/src/: moihgp_ctypes.cpp  wrapper.cpp
src/: example.cpp
